  make sure full object and one-less-than-full object have a different number
  of vanishing sprites (so object changes visually when it goes from full to
  one less than full).  Fixes jasonrohrer/OneLifeData7#869

--Can now toggle vsync from Settings screen.  Part of #875

--Can now manually type in a custom frame rate on Settings screen when vsync
  is disabled.  Fixes #875




Server Fixes

--New maxRadioDistance setting, set to 100,000 tiles.  Fixes #871

--Donkeytown players are never sent CU status messages (CURSES), so they can't
  identfy each other using globally-assigned curse status words.  Fixes #873

--No genetic fitness information logged for Donkeytown players.  Fixes #874








Version 379    2023-July-14

--Editor now supports importing temporary test map (so you can work on and
  tweak a test map without actually saving a scene into the scene folder).

--Finally found source of disconnect-on-death bug.  When client receives its
  own X X death message, it instantly closes the socket to the server.
  However, later code in the remainder of that client step sometimes sends
  messages to the server (in the case of FLIP, for example).  When this
  happens, the send was failing, and the disconnection signal was being raised,
  overriding the you-died signal.  Fixed by simply not sending a message
  through the socket if it's already closed.  Thanks Agne for sending a log
  catching the problem.  Fixes #852

--New Services screen accessible from login screen, which provides a
  Challenge/Hash interface for verifying your account with external services.
  External services can verify these hashes with
  http://onehouronelife.com/ticketServer/server.php?action=check_ticket_hash
  Fixes #860

--Fixed so that creation sound's initalOnly is respected for floor objects.

--Fixed bad pointer access in editor after transition deleted. 

--Fixed From Pattern and From Category labels in Transition Editor that were