@@ -524,6 +524,8 @@ unfollowCommand "/UNFOLLOW"
 
 propertyCommand "/PROPERTY"
 
+orderCommand "/ORDER"
+
 
 familyLabel "+FAMILY+"
 leaderLabel "+LEADER+"
@@ -802,7 +804,7 @@ pauseMessage4 "-"
 commandHintsA "CHAT COMMANDS:##~~##/FAM##/DIE##/DISCONNECT##/FPS##/NETWORK##/PING####/HAPPY##/MAD##/ANGRY##/SAD##/DEVIOUS##/JOY##/BLUSH##/HUBBA##/ILL##/YOOHOO##/HMPH##/LOVE##/OREALLY##/SHOCK"
 
 
-commandHintsB "/LEADER##/FOLLOWER##/ALLY##/UNFOLLOW##/PROPERTY####I AM [NAME]##YOU ARE [NAME]##CURSE [NAME]##I FORGIVE [NAME]##[NAME] OWNS THIS##I'LL KILL [NAME]##I JOIN YOU##I FOLLOW [NAME]##I EXILE [NAME]##I REDEEM [NAME]##ORDER, [TEXT]##~~##NOTE:##~~##'YOU' FOR [NAME]##IS CLOSEST PERSON##LIKE: 'CURSE YOU'"
+commandHintsB "/LEADER##/FOLLOWER##/ALLY   /ORDER##/UNFOLLOW##/PROPERTY####I AM [NAME]##YOU ARE [NAME]##CURSE [NAME]##I FORGIVE [NAME]##[NAME] OWNS THIS##I'LL KILL [NAME]##I JOIN YOU##I FOLLOW [NAME]##I EXILE [NAME]##I REDEEM [NAME]##ORDER, [TEXT]##~~##NOTE:##~~##'YOU' FOR [NAME]##IS CLOSEST PERSON##LIKE: 'CURSE YOU'"
 
 
 
